--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*---------------------------------------------- GLOBAL SETTINGS */
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -o-box-sizing: border-box; box-sizing: border-box; }
 html { border: 0; margin: 0; padding: 0; width: 100%; height: 100%; }
-body { border: 0; margin: 0; padding: 0; width: 100%; height: 100%; position: relative; background-color: #fff;  font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 20px; }
+body { border: 0; margin: 0; padding: 0; width: 100%; height: 100%; position: relative; background-color: #fff;  font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 20px; overflow-x: hidden; }
 
 /* -------------------------------------------------------------- HTML5 TAGS */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
@@ -218,8 +218,8 @@ ul.contact-list li textareainput:-ms-input-placeholder { color:#808080; opacity:
 ul.contact-list li textareainput::-webkit-input-placeholder { color: #808080; opacity: 1; }
 ul.contact-list li textareainput:-moz-placeholder { color: #808080; opacity: 1; }
 ul.contact-list li textareainput::-moz-placeholder { color: #808080; opacity: 1; }
-ul.contact-list li input[type="submit"] { background-color: #109af5; border: none; font-size: 16px; line-height: 22px; color: #fff; font-weight: 400; text-transform: uppercase; padding: 10px 40px; border-radius: 30px; min-width: 150px; display: inline-block; vertical-align: top; }
-ul.contact-list li input[type="submit"]:hover { background-color: #01406c; color: #fff; }
+ul.contact-list li input[type="button"] { background-color: #109af5; border: none; font-size: 16px; line-height: 22px; color: #fff; font-weight: 400; text-transform: uppercase; padding: 10px 40px; border-radius: 30px; min-width: 150px; display: inline-block; vertical-align: top; }
+ul.contact-list li input[type="button"]:hover { background-color: #01406c; color: #fff; }
 .contact .send-message:after { content: ""; position: absolute; right: 0px; top: 0px; height: 100%; width: 1px;
 	background: -moz-linear-gradient(270deg, rgba(255, 255, 255, 1) 0%, rgba(210, 210, 210, 1) 18%, rgba(210, 210, 210, 1) 76%, rgba(255, 255, 255, 1) 100%); 
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(18%, rgba(210, 210, 210, 1)), color-stop(76%, rgba(210, 210, 210, 1)), color-stop(100%, rgba(255, 255, 255, 1))); 
