--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ CSS FOR THE PROJECT STARTS HERE
 .store-btn:hover { background-color: #109af5; color: #fff; background-position: 12px -33px; }
 
 .header .container { -webkit-transition: all 0.6s ease; -moz-transition: all 0.6s ease; -ms-transition: all 0.6s ease; -o-transition: all 0.6s ease; transition: all 0.6s ease; }
-.header.fixed { position: fixed; background-color: rgba(1, 64, 108, 0.85); padding: 6px 0px; }
+.header.fixed { position: fixed; background-color: rgba(1, 64, 108, 1); padding: 6px 0px; }
 .header.fixed .container { max-width: 100%; }
 .header.fixed .logo img { max-width: 40px; }
 .header.fixed nav { margin-top: 9px; }
@@ -113,13 +113,14 @@ CSS FOR THE PROJECT STARTS HERE
 
 
 /* -----BANNER PART----- */
-.banner { background-position: center; background-repeat: no-repeat; background-size: cover;  position: relative; padding: 200px 0px 0px; margin: 0px 0px 20px; }
+.banner { background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  position: relative; padding: 150px 0px 0px; margin: 0px 0px 20px; }
 #particles-js { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; opacity: 0.8; z-index: 2; }
-.banner .row { -webkit-display: flex; display: flex; -webkit-flex-flow: row wrap; flex-flow: row wrap; justify-content: space-between; align-items: center; }
-.banner .row .text { width: 30%; }
-.banner h3 { color: #fff; }
+.banner .row { -webkit-display: flex; display: flex; -webkit-flex-flow: row wrap; flex-flow: row wrap; justify-content: space-between; align-items: center; position: relative; z-index: 4; }
+.banner .row .text { width: 40%; padding-left: 10%; }
+.banner a.logo { display: inline-block; vertical-align: top; }
+.banner h3 { color: #fff; margin: 25px 0px 15px; }
 .banner p { color: #fff; }
-.banner .row .image { width: 70%; position: relative; margin-right: -70px; margin-bottom: -20px; }
+.banner .row .image { width: 60%; position: relative; text-align: right; }
 .banner .row .image img { max-width: 100%; }
 
 
