--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,19 @@ CSS FOR THE PROJECT STARTS HERE
 .btn:hover { background-color: #01406c; color: #fff; -webkit-box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.3); -moz-box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.3); -ms-box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.3); -o-box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.3); box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.3); }
 
 @media only screen and (max-width: 979px) {
-	
+	h2 { font-size: 30px; line-height: 36px; }
+	h5 { font-size: 18px; line-height: 24px; }
+	p { font-size: 13px; }
+	a { font-size: 13px; }
+}
+@media only screen and (max-width: 767px) {
+	h2 { font-size: 28px; line-height: 34px; }
+	p { margin: 0px 0px 6px; }
+}
+@media only screen and (max-width: 639px) {
+	h2 { font-size: 24px; line-height: 30px; }
+	h5 { font-size: 16px; line-height: 22px; }
+	h6 { font-size: 14px; line-height: 20px; }
 }
 
 /* -----HEADER PART START----- */
@@ -192,8 +204,22 @@ footer p a:hover { text-decoration: underline; }
 .inner-banner { position: relative; }
 .inner-banner:before { content: ""; position: absolute; left: 0px; top: 0px; background-image: url('../images/banner-pattern.png'); background-repeat: repeat; background-position: left top; width: 100%; height: 100%; z-index: 2; }
 .inner-banner img { width: 100%; }
-.inner-banner .caption { position: absolute; left: 50%; top: 50%; width: 100%; max-width: 1170px; padding: 60px 15px 0px; text-align: center; transform: translate(-50%, -50%); z-index: 5; }
+.inner-banner .caption { position: absolute; left: 50%; top: 50%; width: 100%; max-width: 1170px; padding: 60px 15px 0px; text-align: center; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); z-index: 5; }
 .inner-banner .caption h2 { color: #fff; font-size: 52px; line-height: 1; }
+
+@media only screen and (max-width: 979px) {
+	.inner-banner .caption { padding: 15px; }
+	.inner-banner .caption h2 { font-size: 40px; }
+}
+@media only screen and (max-width: 767px) {
+	.inner-banner .caption h2 { font-size: 36px; line-height: 42px; }
+}
+@media only screen and (max-width: 639px) {
+	.inner-banner .caption h2 { font-size: 30px; line-height: 36px; }
+}
+@media only screen and (max-width: 479px) {
+	.inner-banner .caption h2 { font-size: 24px; line-height: 30px; }
+}
 
 /* CONTACT SECTION */
 .contact-section { padding: 70px 0px; }
@@ -231,15 +257,23 @@ footer p a:hover { text-decoration: underline; }
 
 
 /* -----HOW IT WORKS----- */
-.how-its-work .row { -webkit-display: flex; display: flex; -webkit-flex-flow: row wrap; flex-flow: row wrap; justify-content: space-between; align-items: center; border-bottom: 1px solid #ddd; padding: 50px 0px; }
+.how-its-work h2 { margin: 0px 0px 50px; }
+.how-its-work .row { -webkit-display: flex; display: flex; -webkit-flex-flow: row wrap; flex-flow: row wrap; justify-content: space-between; align-items: center; padding: 0px 0px 50px; position: relative; }
+.how-its-work .row:before { content: ""; position: absolute; left: 50%; top: 0px; width: 1px; height:100%; background-color: #01406c; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); transform: translateX(-50%); }
 .how-its-work .screen { width: 40%; text-align: right; }
-.how-its-work .screen img { max-width: 100%; -webkit-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -moz-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -ms-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -o-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); border-radius: 22px; }
-.how-its-work .description { width: 55%; text-align: left; }
-.how-its-work .row:nth-child(even) .screen { order: 2; text-align: left; }
-.how-its-work .row:nth-child(even) .description { order: 1; text-align: right; }
+.how-its-work .screen img { max-width: 100%; -webkit-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -moz-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -ms-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); -o-box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.1); border-radius: 22px; z-index: 2; }
+.how-its-work .app { width: 100px; height: 100px; border-radius: 50%; background-color: #109af5; border: 5px solid #01406c; position: relative; z-index: 5; }
+.how-its-work .app:before, .how-its-work .app:after { content: ""; position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+.how-its-work .app:before { width: 92%; height: 92%; border-radius: 50%; background-color: #01406c;  }
+.how-its-work .app:after { width: 144px; height: 13px; background-image: url(../images/works-arrow.png); background-repeat: no-repeat; background-position: 0px 0px; z-index: -1; }
+.how-its-work .app h5 { position: relative; z-index: 9; line-height: 90px; color: #fff; font-style: italic; }
+.how-its-work .description { width: 40%; text-align: left; }
+.how-its-work .row:nth-child(odd) .screen { order: 3; text-align: left; }
+.how-its-work .row:nth-child(odd) .app { order: 2; }
+.how-its-work .row:nth-child(odd) .description { order: 1; text-align: right; }
 .how-its-work .row:last-child { padding-bottom: 0px; border-bottom: none; }
 .how-its-work h4 { font-family: 'Oswald', sans-serif; margin: 0px 0px 15px; color: #111; }
-.how-its-work h6 { font-style: italic; color: #109af5; margin-bottom: 20px; }
+.how-its-work h6 { color: #109af5; margin: 0px 0px 20px; }
 .how-its-work p { line-height: 24px; }
 
 
@@ -281,4 +315,20 @@ footer p a:hover { text-decoration: underline; }
 
 @media only screen and (max-width: 979px) {
 	.terms-condition { padding: 50px 0px; }
+	.terms-condition ul li { font-size: 13px; }
+}
+@media only screen and (max-width: 767px) {
+	.terms-condition { padding: 40px 0px; }
+	.terms-condition h5 { margin: 0px 0px 10px; }
+	.terms-condition h6 { margin: 15px 0px 6px; }
+	.terms-condition ul li { margin: 0px 0px 6px; }
+	.terms-condition ul { margin: 10px 0px 10px 25px; }
+	.terms-condition span { font-weight: 600; }
+}
+@media only screen and (max-width: 639px) {
+	.terms-condition { padding: 30px 0px; }
+	.terms-condition ul { margin: 10px 0px; }
+}
+@media only screen and (max-width: 479px) {
+	.terms-condition { padding: 20px 0px; }
 }
