--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ CSS FOR THE PROJECT STARTS HERE
 	h2 { font-size: 24px; line-height: 30px; }
 	h5 { font-size: 16px; line-height: 22px; }
 	h6 { font-size: 14px; line-height: 20px; }
+	.btn { font-size: 16px; line-height: 22px; padding: 10px 40px; }
 }
 
 /* -----HEADER PART START----- */
@@ -247,12 +248,37 @@ footer .block ul.terms-condition li a:hover { color: #109af5; text-decoration: u
 
 .contact-form ul li select { width: 100%; height: 50px; background-color: #fff; border: 1px solid #eaeaea; border-radius: 0px; font-size: 14px; line-height: 48px; font-weight: 400; color: #a8a8a8; padding: 0px 30px 0px 15px; -webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; -o-appearance: none; appearance: none; background-image: url('../images/select-dropdown.png'); background-repeat: no-repeat; background-position: right 10px center; }
 .contact-form ul li input[type=file] { position: absolute; filter: alpha(opacity=0); opacity: 0; }
-.contact-form ul li [type=file] + label { border: 1px solid #eaeaea; text-align: left; padding: 0px 15px 0px 50px; width: 100%; height: 50px; left: 0; top: 0px; position: relative; font-size: 14px; line-height: 48px; font-weight: 400; color: #a8a8a8; background-image: url('../images/add-file.png'); background-position: 10px 8px; background-repeat: no-repeat; background-color: #fff; display: block; cursor: pointer; }
+.contact-form ul li [type=file] + label { border: 1px solid #eaeaea; text-align: left; padding: 0px 15px 0px 50px; width: 100%; height: 50px; left: 0; top: 0px; position: relative; font-size: 14px; line-height: 48px; font-weight: 400; color: #a8a8a8; background-image: url('../images/add-file.png'); background-position: 10px 8px; background-repeat: no-repeat; background-color: #fff; display: block; cursor: pointer; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 
 
 .contact-details { float: left; width: 30%; padding: 15px; background-color: #f6f6f6; border: 1px solid #ddd; font-size: 14px; line-height: 24px; color: #333; font-style: italic; }
 
-
+@media only screen and (max-width: 979px) {
+	.contact-section { padding: 50px 0px; }
+}
+@media only screen and (max-width: 767px) {
+	.contact-section { padding: 40px 0px; }
+	.contact-form { width: 100%; margin: 30px 0px 0px; }
+	.contact-details { width: 100%; }
+}
+@media only screen and (max-width: 639px) {
+	.contact-section { padding: 30px 0px; }
+	.contact-details { font-size: 13px; line-height: 22px; padding: 10px; }
+	.contact-form ul li { margin: 0px 0px 15px; }
+	.contact-form ul li input:not([type="submit"]):not([type="button"]), .contact-form ul li textarea { font-size: 13px; line-height: 38px; height: 40px; padding: 0px 8px; }
+	.contact-form ul li [type="file"] + label { font-size: 13px; line-height: 38px; height: 40px; background-position: 6px 4px; padding: 0px 15px 0px 42px; }
+	.contact-form ul li select { font-size: 13px; line-height: 38px; height: 40px; padding: 0px 25px 0px 8px; background-position: right 6px center; }
+	.contact-form ul li textarea { height: 80px; line-height: 22px; padding: 8px; }
+	.contact-form ul li:last-child { text-align: center; }
+}
+@media only screen and (max-width: 479px) {
+	.contact-section { padding: 20px 0px; }
+	.contact-form { margin: 20px 0px 0px; }
+	.contact-form ul li { margin: 0px 0px 10px; }
+	.contact-form ul li .block { width: 100%; margin-right: 0px; margin-bottom: 10px; }
+	.contact-form ul li .block:last-child { margin-bottom: 0px; }
+	.contact-form ul li .btn { margin-top: 10px; }
+}
 
 
 /* -----HOW IT WORKS----- */
